<resources>
    <string name="custom_google_api_key" translatable="false">AIzaSyBzWfttcfGIP5NNk1BSTMpHvl2H-n7xR50</string>
    <string name="app_name">GOCAR</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="it_s_more_than_a_car_rental_app">It’s more than a car rental app!</string>
    <string name="select_email_or_phone">EMAIL OR PHONE NUMBER</string>
    <string name="email">EMAIL</string>
    <string name="email_txt">Email</string>
    <string name="phone">PHONE NUMBER</string>
    <string name="phone_txt">Phone Number</string>
    <string name="mobile_num">Mobile number</string>
    <string name="phone_">Phone</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Log in</string>
    <string name="register_now">Register now</string>
    <string name="skip">Skip</string>
    <string name="email_pass_err_msg">Enter email or phone number</string>
    <string name="password_err_msg">Enter your password</string>
    <string name="first_name">First name</string>
    <string name="first_Name">First name</string>
    <string name="first_name_cap">FIRST NAME</string>
    <string name="last_name">Last name</string>
    <string name="last_Name">Last name</string>
    <string name="password">PASSWORD</string>
    <string name="confirm_password">Confirm password</string>
    <string name="i_accept_terms_conditions"><![CDATA[I accept the terms of service]]></string>
    <string name="submit">Submit</string>
    <string name="registration">Registration</string>
    <string name="enter_phone_err_msg">@string/phone</string>
    <string name="enter_email_err_msg">@string/email</string>
    <string name="inalid_email_err_msg">Invalid email</string>
    <string name="first_name_err_msg">@string/first_name</string>
    <string name="last_name_err_msg">@string/last_name</string>
    <string name="enter_password_err_msg">Enter your password</string>
    <string name="enter_confirm_password_err_msg">Please re-confirm password</string>
    <string name="password_mismatch_err_msg">Passwords mismatch</string>
    <string name="term_condition_err_msg">Please agree to the terms of service</string>
    <string name="terms_conditions"><![CDATA[Terms of service]]></string>
    <string name="dummyText">Nam et ante quis dolor elementum semper. Nullam cond imentum feugiat dapibus. Vestibulum ante ipsum pri mis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce consectetur erat non purus convallis tempus.lla ligula ut elit ullamcorper dictum. Vivamus egestas luctus enim nec gravida. Nam mollis cursus tortor ac vehicula. Quisque feugiat, dolor eget pretium imperdiet, neque mi placerat lacus, ac molestie leo mauris a sem. ondimentum quis quis quam. Nam et ante quis dolor elementum semper. Nullam cond imentum feugiat dapibus. Vestibulum ante ipsum pri mis in faucibus orci luctus et ultrices posuere cubilia curae; Fusce consectetur erat non purus convallis tempus. Aenean aliquet tempus dapibus. Donec fringilla quam.</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="enter_otp">Enter verification code</string>
    <string name="we_have_sent_otp_on_your_number">We have sent a verification code to your number</string>
    <string name="verify">Verify</string>
    <string name="verified_information">Verified Information</string>
    <string name="if_you_did_not_receive_otp_resend">Resend verification code</string>
    <string name="otp">Verification code</string>
    <string name="otp_validation_err_msg">Enter verification code</string>
    <string name="location_permission">Location permission</string>
    <string name="location_permission_info">Allow us to access your location\nto better find cars around you.</string>
    <string name="allow">Allow</string>
    <string name="don_t_allow">Don’t allow</string>
    <string name="select_city">Select city</string>
    <string name="continue_">Continue</string>
    <string name="find">Find</string>
    <string name="intro_1_msg">Whether you’re looking \n for a car to rent or to \n rent out your car, \n you’ve come to the \n right place!</string>
    <string name="book">Book</string>
    <string name="intro_2_msg">Select a location, \na date, \na time, \nbook the right \ncar for you. \n\nAn experience that’s as easy \nas it is customizable.</string>
    <string name="drive">Drive</string>
    <string name="intro_3_msg">For the entrepreneurs with a twinkle in\ntheir eyes, this is definitely the app for\nyou.\nWe’ll show you the ropes on how to list\nyour cars and make some income.</string>
    <string name="earn">Earn</string>
    <string name="intro_4_msg">We’re happy you made it this far into the welcome screen, but now it’s time to get your feet wet! \n\nRent out a car, and make some memories.</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="forgot_password_title">Forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="search">Search</string>
    <string name="trips">Trips</string>
    <string name="trip">Trip</string>
    <string name="trips_">trips</string>
    <string name="messages">Messages</string>
    <string name="host">Host</string>
    <string name="profile">Profile</string>
    <string name="password_length_err_msg">Password must be at least 6 characters, and must contain each of the following: uppercase letter, lowercase letter, special character, and a number </string>
    <string name="list_your_car">List your car</string>
    <string name="tell_us_about_your_car">Tell us about your car</string>
    <string name="national_id">National ID</string>
    <string name="enter_">Enter</string>
    <string name="enter_plate_number">Enter plate number</string>
    <string name="upload_snap_of_your_national_id">Upload copy of your national ID</string>
    <string name="pickup_location">Pickup location</string>
    <string name="enter_location">Enter location</string>
    <string name="edit_">Edit</string>
    <string name="what_car_do_you_have">What car do you have?</string>
    <string name="upload_latest_technical_report">Upload latest technical report</string>
    <string name="upload_latest_technical_report_">Upload Latest Technical Report</string>
    <string name="upload_snap_of_istimara">Upload vehicle registration card</string>
    <string name="enter_vin_chassis_number">Enter chassis number</string>
    <string name="vin_chassis_number">Chassis Number</string>
    <string name="transmission">Transmission</string>
    <string name="automatic">Automatic</string>
    <string name="manual">Manual</string>
    <string name="car_has_never_been_in_any_major_accident">%s car has never been in any\nmajor accident</string>
    <string name="i_have_listed_my_personal_vehicle">I have listed my personal vehicle</string>
    <string name="this_car_is_owned_by_the_company">This car is owned by the company</string>
    <string name="licence_plate_number">License Plate Number</string>
    <string name="car_registration_city">Car registration city</string>
    <string name="car_features">Car features</string>
    <string name="add">Add</string>
    <string name="car_description">Car description</string>
    <string name="type_here">Type here</string>
    <string name="type">Type …</string>
    <string name="next">Next</string>
    <string name="country">Country</string>
    <string name="street_address">Street address</string>
    <string name="zip_postal_code">Zip / Postal code</string>
    <string name="confirm">Confirm</string>
    <string name="user_status_related_number_err_msg">%s should begin with 1 and be 10-digits long.</string>
    <string name="the_national_id">The National ID</string>
    <string name="the_company_registration_number">The registration number</string>
    <string name="select_location_err_msg">Select location</string>
    <string name="state_region">State</string>
    <string name="city">City</string>
    <string name="car_feature_err_msg">Select features</string>
    <string name="year">Year</string>
    <string name="car_type">Car type</string>
    <string name="model">Model</string>
    <string name="make">Make</string>
    <string name="odometer">Odometer</string>
    <string name="odometer_err_message">Select odometer range</string>
    <string name="model_err_msg">Select model</string>
    <string name="car_type_err_msg">Select car type</string>
    <string name="make_err_msg">Select make</string>
    <string name="year_err_msg">Select year</string>
    <string name="address_err_msg">Enter address</string>
    <string name="zip_code_err_msg">Enter zip code</string>
    <string name="trip_advance_notice_msg">How much advance notice do you need before a trip starts?</string>
    <string name="car_availability">Car availability</string>
    <string name="distance_msg">What’s the shortest and longest possible trip you’ll accept?</string>
    <string name="not_msg_car_availablity">Note: the default options will be 6 hours for minimum trip duration, and 30 days for maximum trip duration.</string>
    <string name="note">Note:</string>
    <string name="car_photos">Car photos</string>
    <string name="minimum_trip_duration">Minimum trip duration</string>
    <string name="maximum_trip_duration">Maximum trip duration</string>
    <string name="resend">Resend</string>
    <string name="list_your_car_now">List your car now</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="take_snap_of_front_side_of_your_national_id">Take a photo of front-side of your National ID</string>
    <string name="put_the_camera_right_above_and_take_the_snap_clearly_as_demonstrated_in_the_picture">Take a photo as demonstrated in the example shown</string>
    <string name="make_sure_the_light_is_sufficient">Take a well-lit and clear, legible photo </string>
    <string name="take_snap_of_your_istamara_id">Take a photo of your vehicle registration / istimara</string>
    <string name="istamara_Id">Vehicle registration / istimara</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="min_hour_err_msg">Enter minimum hour</string>
    <string name="dear_customer_to_process_your_order_upon_arrival_in_a_timely_n1_valid_id_driver_license_n2_valid_abshir_for_residents_in_saudi_arabia">Stay safe, adhere to traffic laws of the country, keep the car clean and tidy, and make sure to return the vehicle to the drop-off location at the agreed time.\n\nClick here for our <a href='https://gocar.sa/help'>TERMS OF SERVICE.</a></string>
    <string name="fuel_policy">Fuel policy</string>
    <string name="fule_policy_msg">You are expected to return the car with the same amount of gas or electric charge it had at the time of pick-up. If you don\'t replace the fuel, the host is entitled reimburdement from you. Take pictures of fuel/charge level before and after your trip for proof in case of dispuate.</string>
    <string name="i_agree">I agree</string>
    <string name="contactViaPhone">Dial phone</string>
    <string name="contactVieEmail">Email support</string>
    <string name="contactSupport">Contact Support</string>
    <string name="terms_amp_conditions"><![CDATA[terms & conditions]]></string>
    <string name="enter_address">Enter address</string>
    <string name="enter_country">Enter country</string>
    <string name="state_regiones">State / Region</string>
    <string name="enter_state_region">Enter state / region</string>
    <string name="enter_city">Enter city</string>
    <string name="address">Address</string>
    <string name="zip_postal_codees">Zip / Postal Code</string>
    <string name="terms_of_service">Terms of service</string>
</resources>