<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.HostHelpActivity">

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/ic_back"/>

    <TextView
        android:id="@+id/headingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/BoldFont"
        android:text="@string/contactSupport"
        android:textAllCaps="true"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_centerHorizontal="true" />

    <ScrollView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headingText"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_40sdp">

        <TextView

            android:theme="@style/RegularFont"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummyText"
            android:layout_centerHorizontal="true" />


    </ScrollView>




    <Button
        android:id="@+id/btnPhone"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_80sdp"
        android:layout_alignParentBottom="true"
        android:elevation="@dimen/shadow_dimen"
        android:background="@drawable/button_primary_bg"
        android:text="@string/contactViaPhone" />

    <Button
        android:id="@+id/btnEmail"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_30sdp"
        android:elevation="@dimen/shadow_dimen"
        android:background="@drawable/button_primary_bg"
        android:text="@string/contactVieEmail" />



</RelativeLayout>