<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/_10sdp"
    android:layout_marginEnd="@dimen/_10sdp"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/_5sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:paddingBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/help"
                style="@style/InterSemiBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/terms_of_service"
                android:textAlignment="viewStart"
                android:textAllCaps="false"
                android:textColor="@color/textColorPrimary"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView47"
                style="@style/InterRegularFont"
                android:layout_width="0dp"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/dear_customer_to_process_your_order_upon_arrival_in_a_timely_n1_valid_id_driver_license_n2_valid_abshir_for_residents_in_saudi_arabia"
                android:textColorLink="@color/newColorPrimary"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sdp"
                android:textSize="@dimen/_11ssp"
                app:layout_constraintEnd_toEndOf="@+id/help"
                app:layout_constraintStart_toStartOf="@+id/help"
                app:layout_constraintTop_toBottomOf="@+id/help" />

            <TextView
                android:id="@+id/textView48"
                style="@style/InterSemiBold"
                android:layout_width="0dp"
                android:textSize="@dimen/_17ssp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/fuel_policy"
                app:layout_constraintEnd_toEndOf="@+id/textView47"
                app:layout_constraintStart_toStartOf="@+id/textView47"
                app:layout_constraintTop_toBottomOf="@+id/textView47" />

            <TextView
                style="@style/RegularFont"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/fule_policy_msg"
                android:id="@+id/fuelPolicyMsg"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="@+id/textView47"
                app:layout_constraintStart_toStartOf="@+id/textView48"
                app:layout_constraintTop_toBottomOf="@+id/textView48" />

            <Button
                android:id="@+id/agree"
                style="@style/NewButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:background="@drawable/bg_new_button_primary_black"
                android:text="@string/i_agree"
                android:textAllCaps="true"
                android:textSize="@dimen/_19ssp"
                android:textColor="@color/coral"
                app:layout_constraintEnd_toEndOf="@+id/fuelPolicyMsg"
                app:layout_constraintStart_toStartOf="@+id/fuelPolicyMsg"
                app:layout_constraintTop_toBottomOf="@+id/fuelPolicyMsg" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>